[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
dynamic = ["version"]
name = "cs9-autograder"
requires-python = ">= 3.10"
authors = [
    {name = "Iris Hitomi Nakayama", email = "nakayama@ucsb.edu"},
    {name = "Michelle Zimmermann", email = "michellezimmermann@ucsb.edu"}
]
maintainers = [
    {name = "Yekaterina Kharitonova", email = "ykk@cs.ucsb.edu"}
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/ucsb-cs9/cs9-lab-autograder"
